# azazm

./: CMakeLists.txt  README.md  build.md  build.sh  package-lock.json
.github/instructions/: azam.instructions.md
libscocs/: DPDK Documentation.txt  Kernel TLS offload.txt  Kernel TLS.txt  SSL_connect.txt  SSL_do_handshake.txt  SSL_read.txt  SSL_write.txt  [MS-CSSP]-240423.docx  [MS-NLMP]-240423.docx
src/: buffer_pool.c  credsp.c  dpdk_impl.c  file_parser.c  rdp_nla_checker.c  rdp_nla_checker.h
